WIP: Fixing bugs with removing sections in random of the day and the animation not updating when sections are added. Adding RotD to nav bar with hints if the navbar is too wide

--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -5,16 +5,49 @@
   display: flex;
   flex-direction: row;
 
+  &Links {
+    display: inline-flex;
+    flex-direction: row;
+    margin: 0;
+    min-width: 0;
+    overflow-x: auto;
+    padding: 0;
+
+    &Container {
+      flex: 1;
+      overflow-x: hidden;
+      position: relative;
+      text-align: right;
+    }
+  }
+
   &Link {
     border-style: solid;
     border-width: 0 0 0 1px;
     box-sizing: border-box;
+    flex: none;
     padding: 16px 8px;
 
     &.homeLink {
       border-width: 0 1px 0 0;
-      margin-right: auto;
     }
+  }
+}
+
+.arrowHint {
+  border-style: solid;
+  border-width: 1px;
+  opacity: 0.4;
+  padding: 0;
+  position: absolute;
+  width: 16px;
+
+  &Left {
+    left: 0;
+  }
+
+  &Right {
+    right: 0;
   }
 }
 
